test-cases/final-dump/unique_loop_err.exp
Error detected during uniqueness checking of module(s) unique_loop_err
final-dump/unique_loop_err.wybe:10:9: Reuse of unique variable a:unique_loop_err
