test-cases/final-dump/unique_loop_err.wybe
representation is {unique} 32 bit signed

pub def bar(a:_) { pass }

def foo(b:bool, a:_) {
    bar(a)
    for ?i in [] {
        ?a = 0:_
    }
    bar(a)
}
